# CHNOBLi

./: .buildinfo  .env_template  .flake8  .gitignore  LICENSE.txt  Makefile  README.md  docker-compose-build.yml  docker-compose-deploy.yml  docker-compose-dev.yml  docker-compose.yml  evaluation.html  genindex.html  ground_truth.html  import_data.sh  index.html  main.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.html  setup.sh  src.html  src.preprocessing.html  using_your_data.html
.doctrees/: environment.pickle  evaluation.doctree  ground_truth.doctree  index.doctree  main.doctree  modules.doctree  quickstart.doctree  setup.doctree  src.doctree  src.preprocessing.doctree  using_your_data.doctree
_sources/: index.rst.txt  quickstart.rst.txt  setup.rst.txt
configs/: configurations.json  configurations_customtag.json  configurations_example.json  eval_config.json  eval_config_example.json
maintenance/: data_links.json  import_data.sh  resave_models.py  resolve_doi.py  setup.sh
scripts/: eval_example.sh  link_example.sh  tag_example.sh
src/: aggregation.py  evaluation.py  linking.py  postprocess.py  tag_flair.py
tests/: test_aggregation.py  test_compare.py  test_evaluation.py  test_evaluation_utils.py  test_linking.py  test_linking_utils.py  test_main.py  test_postprocess.py  test_preprocess.py  test_split_year.py  test_tagflair.py  test_utils.py
utility/: compare.py  evaluation_utils.py  gnd_prefix_lastnames.txt  linking_utils.py  settings.py  split_year.py  (+1 more)
(+36 files in other folders)
